# modular-decomposition

./: .gitignore  CMakeLists.txt  Commons.h  DyckWord.cpp  DyckWord.h  ModDecomp.cpp  ModDecomp.h  README.md  Token.cpp  Token.h
